{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "e3a31244-ea1f-40e7-94d4-bc3bf86fb850",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c8658ec5-96fa-4d73-a322-87d91647ffd0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "MoveKeyboard",
                    "id": "580590d9-9667-46ed-9831-7982eabbaa65",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "91c00d18-dbdb-44f1-9049-af4a79bbc7b5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "126ce39c-6b77-429a-83ec-bc342c88d0b5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7d5443da-5067-416f-9055-7fe58eae3543",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0e557398-42b5-4891-8ac7-35ddaa82a8e3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}